# bore

./: .coveragerc  .editorconfig  MANIFEST.in  Makefile  README.rst  bore.py  requirements.txt  setup.cfg  setup.py
