[bdist_wheel]
universal = 0

[flake8]
exclude = *.egg-info,*.pyc,.cache,.git,.tox,build,dist,__pycache__
ignore = D100,D101,D102,D103,D104,D105,D106,D107,H301,H306,W503
max-line-length = 79
verbose = 2

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = bore
line_length = 79
multi_line_output = 3
use_parentheses = true

[metadata]
license_file = LICENSE

[tool:pytest]
addopts =
    --verbose
    --cov-config=.coveragerc
    --cov=bore.py
    --cov-report=term-missing
    --cov-report=html
